# kutt-rs

./: Cargo.toml  Makefile  README.md
examples/: create_short_link.rs  delete_short_link.rs  list_short_link.rs
src/: api.rs  apikey.rs  args.rs  constants.rs  errors.rs  lib.rs  main.rs  tests.rs  utils.rs
