[package]
name = "kutt"
version = "0.0.1"
authors = ["mahdi <mahdi.robatipoor@gmail.com>"]
edition = "2018"
description = "cli for kutt "
homepage = "https://github.com/robatipoor/kutt-cli"
keywords = ["command", "shortlink","kutt","cli","url","link"]
license = "MIT/Apache-2.0"
repository = "https://github.com/robatipoor/kutt-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = "0.9.18"
url = "1.7.2"
clap = "2.33.0"
fern = "0.5.8"
log = "0.4.6"
env_logger = "0.6.1"
dirs = "2.0.1"
failure = "0.1.5"
serde_derive = "1.0.92"
serde = "1.0.92"
lazy_static = "1.3.0"
serde_json = "1.0.39"


[dev-dependencies]
tempfile = "3.0.8"
assert_cmd = "0.11.1"
dotenv = "0.14.1"