[package]
name = "kutt"
version = "0.0.2"
authors = ["mahdi <mahdi.robatipoor@gmail.com>"]
edition = "2018"
description = "command line tool for kutt.it service"
homepage = "https://github.com/robatipoor/kutt-rs"
keywords = ["command-line", "shortlink","kutt","url"]
license = "MIT"
repository = "https://github.com/robatipoor/kutt-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = "0.9.18"
clap = "2.33.0"
fern = "0.5.8"
log = "0.4.6"
env_logger = "0.6.1"
dirs = "2.0.1"
failure = "0.1.5"
serde_derive = "1.0.93"
serde = "1.0.93"
lazy_static = "1.3.0"
serde_json = "1.0.39"


[dev-dependencies]
dotenv = "0.14.1"